# yamaquasi

./: Cargo.toml  LICENSE  README.md  README_classgroup.md  README_ecm.md  README_qsieve.md  benchmarks.sh  pymqs.pyi  pyproject.toml  semiprimes.py
.github/workflows/: pymqs.yml  rust.yml
benches/: arith.rs  arith_montgomery.rs  arith_poly.rs  bench.rs  benchmatrix.rs  ecm.rs  factor64.rs  matrix.rs  matrixcls.rs  matrixint.rs  pm1.rs  qsieve64.rs  sieve.rs
examples/: edgecases.rs
pymqs/: Cargo.toml  __init__.py  pymqs.pyi
pymqs/src/: lib.rs
scripts/: ecm_chains.py  ecm_study.py  mpqs_calibrate_fbase.py  mpqs_calibrate_interval.py  ntt_study.py  pm1_study.py  qs_calibrate.py  randcomposites.py  randdisc.py  semiprimes.py  siqs_calibrate_fbase.py  siqs_calibrate_interval.py  smoothness_study.py  stage2_study.py  test_classgroup.py  test_general.py
scripts/classgroup/: compute.py  dlog.py  step1_filter.py  step2_classno.py  step3_group.py  verify.py
src/: arith.rs  arith_fft.rs  arith_gcd.rs  arith_montgomery.rs  arith_poly.rs  classgroup.rs  ecm.rs  ecm128.rs  fbase.rs  lib.rs  matrix.rs  matrixint.rs  mpqs.rs  params.rs  pollard_pm1.rs  pollard_rho.rs  poly.rs  pp1.rs  qsieve.rs  qsieve64.rs  relationcls.rs  relations.rs  sieve.rs  siqs.rs  squfof.rs
src/matrix/: gf2.rs  intdense.rs  intsparse.rs  mod.rs
