[package]
name = "yamaquasi"
version = "0.1.0"
edition = "2021"
description = "A toy implementation of multiple polynomial quadratic sieve"
license = "BSD3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.7"
bitvec_simd = "0.20"
bnum = { version = "0.3", features = ["numtraits"] }
num-integer = "0.1"
num-traits = "*"
rayon = "1.6"

[dev-dependencies]
brunch = "0.3"

[profile.release]
debug = 2

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "sieve"
harness = false

