[package]
name = "yamaquasi"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
description = "A toy implementation of multiple polynomial quadratic sieve"
license = "BSD3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.7"
bitvec_simd = "0.20"
bnum = { version = "0.8", features = ["numtraits"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
rayon = "1.7"
wide = "0.7"

[dev-dependencies]
brunch = "0.5"

[profile.release]
debug = 2

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "arith_montgomery"
harness = false

[[bench]]
name = "arith_poly"
harness = false

[[bench]]
name = "benchmatrix"
harness = false

[[bench]]
name = "ecm"
harness = false

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "pm1"
harness = false

[[bench]]
name = "sieve"
harness = false

[[bench]]
name = "factor64"
harness = false

