[package]
name = "yamaquasi"
version = "0.2.1"
rust-version = "1.65"
edition = "2021"
description = "An integer factoring utility"
license = "BSD3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[resolver]
incompatible-rust-versions = "fallback"

[dependencies]
arguments = "0.7"
bitvec_simd = "0.20"
bnum = { version = "0.8", features = ["numtraits"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
rayon = "~1.10" # for MSRV
rayon-core = "~1.12" # for MSRV
wide = "0.7"

[dev-dependencies]
brunch = "0.4" # MSRV 1.66

[profile.release]
debug = 2

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "arith_montgomery"
harness = false

[[bench]]
name = "arith_poly"
harness = false

[[bench]]
name = "benchmatrix"
harness = false

[[bench]]
name = "ecm"
harness = false

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "matrixcls"
harness = false

[[bench]]
name = "matrixint"
harness = false

[[bench]]
name = "pm1"
harness = false

[[bench]]
name = "sieve"
harness = false

[[bench]]
name = "factor64"
harness = false

