[package]
name = "pymqs"
version = "0.2.0"
edition = "2021"
description = "Python bindings for yamaquasi"
license = "BSD3"
 
[lib]
name = "pymqs"
crate-type = ["cdylib"]
 
[dependencies]
pyo3 = { version = "0.19", features = ["abi3-py37", "extension-module"] }
rayon = "1.8"
yamaquasi = { path = ".." }

[profile.release]
debug = 2

