[package]
name = "pymqs"
version = "0.2.2"
rust-version = "1.74"
edition = "2021"
description = "Python bindings for yamaquasi"
license = "BSD3"
 
[lib]
name = "pymqs"
crate-type = ["cdylib"]
 
[resolver]
incompatible-rust-versions = "fallback"

[dependencies]
pyo3 = { version = "0.26", features = ["abi3-py37", "extension-module"] }
rayon = "1.8"
yamaquasi = { path = ".." }

[profile.release]
debug = 2

